# CyclicJoinBench

./: .gitignore  ReadMe.md  load_data.py  pyproject.toml
results/: 2024_12_20.csv
