[tool.poetry]
name = "adaptive-factorization-experiments"
version = "0.1.0"
description = ""
authors = ["PGross <gross@cwi.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
tqdm = "^4.67.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

